--- a/index.html
+++ b/index.html
@@ -2,9 +2,69 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/weatherflow-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>weatherflow</title>
+    <meta name="robots" content="index, follow, max-image-preview:large" />
+    <meta name="description" content="WeatherFlow delivers real-time atmospheric intelligence with immersive 3D visuals, precise hourly forecasts, and geolocated alerts." />
+    <meta name="keywords" content="weather, forecast, atmospheric intelligence, hourly weather, 3D weather visualization" />
+    <meta name="application-name" content="WeatherFlow" />
+    <meta name="apple-mobile-web-app-title" content="WeatherFlow" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="author" content="Tvkaes" />
+    <link rel="canonical" href="https://weatherflow.app/" />
+    <title>WeatherFlow — Immersive Atmospheric Weather Intelligence</title>
+
+    <link rel="icon" type="image/svg+xml" href="/weatherflow-icon.svg" />
+    <link rel="apple-touch-icon" href="/weatherflow-icon.svg" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+    <meta name="theme-color" content="#0b0f1a" />
+    <meta name="color-scheme" content="dark" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="WeatherFlow" />
+    <meta property="og:title" content="WeatherFlow — Immersive Atmospheric Weather Intelligence" />
+    <meta property="og:description" content="Experience cinematic weather data with live atmospheric simulations, precision alerts, and AI-powered mood insights." />
+    <meta property="og:url" content="https://weatherflow.app/" />
+    <meta property="og:image" content="https://weatherflow.app/weatherflow-icon.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="WeatherFlow — Immersive Atmospheric Weather Intelligence" />
+    <meta name="twitter:description" content="Experience cinematic weather data with live atmospheric simulations, precision alerts, and AI-powered mood insights." />
+    <meta name="twitter:image" content="https://weatherflow.app/weatherflow-icon.svg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "WeatherFlow",
+        "url": "https://weatherflow.app/",
+        "applicationCategory": "WeatherApplication",
+        "operatingSystem": "Web",
+        "description": "WeatherFlow delivers real-time atmospheric intelligence with immersive 3D visuals, precise hourly forecasts, and geolocated alerts.",
+        "image": "https://weatherflow.app/weatherflow-icon.svg",
+        "creator": {
+          "@type": "Organization",
+          "name": "Tvkaes"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
